--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>画板</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <canvas class="canvas" id = "canvas">
+  <canvas class="canvas" id="canvas">
   </canvas>
   <!-- <div id="actions" class="actions">
     <button id = "eraser">橡皮擦</button>
     <button id="brush">画笔</button>
   </div> -->
   <ol id="actions" class="actions">
-    <li id = "eraser" class="eraser">
+    <li id="eraser" class="eraser">
       <svg class="icon" aria-hidden="true">
-          <use xlink:href="#icon-Eraser-Tool"></use>
+        <use xlink:href="#icon-Eraser-Tool"></use>
       </svg>
     </li>
     <li id="brush" class="brush active">
       <svg class="icon" aria-hidden="true">
         <use xlink:href="#icon-pen1"></use>
-    </svg>
+      </svg>
+    </li>
+    <li id="clear" class="clear">
+      <svg class="icon" aria-hidden="true">
+        <use xlink:href="#icon-delete"></use>
+      </svg>
+    </li>
+    <li id="save" class="save">
+      <svg class="icon" aria-hidden="true">
+        <use xlink:href="#icon-save"></use>
+      </svg>
     </li>
   </ol>
   <ol id="color" class="color-list">
-    <li id = "green" class="green active"></li>
+    <li id="green" class="green active"></li>
     <li id="blue" class="blue"></li>
     <li id="red" class="red"></li>
   </ol>
-  <script src ="script.js"></script>
-  <script src="//at.alicdn.com/t/font_1187004_9ju2sztpptf.js
-  "></script>
+  <ol id="sizes" class="sizes">
+    <li class="thin" id="thin"></li>
+    <li class="thick" id="thick"></li>
+  </ol>
+  <script src="script.js"></script>
+  <script src="//at.alicdn.com/t/font_1187004_6na3nk6c7hv.js"></script>
 </body>
+
 </html>
